--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,4 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/i
+gnoring-files/ for more about ignoring files.
 
 # dependencies
 
@@ -18,6 +19,7 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
