--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,9 +1,7 @@
-# See https://help.github.com/articles/i
-gnoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-
-node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -19,7 +17,6 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-
 
 npm-debug.log*
 yarn-debug.log*
